Ensure resource editor page displays on mobile

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -877,7 +877,8 @@ a#menu-toggle:focus {
 
     .recent-edits-container,
     .profile-summary-page,
-    .graph-designer-container {
+    .graph-designer-container,
+    .resource-editor-container-main {
         height: auto;
     }
 
@@ -897,7 +898,8 @@ a#menu-toggle:focus {
         min-height: 0;
     }
 
-    .graph-designer-container {
+    .graph-designer-container,
+    .resource-editor-container-main {
         display: inline-block;
     }
 
@@ -916,6 +918,10 @@ a#menu-toggle:focus {
 
     .graph-find, .resource-grid-title {
         font-size: 1.1em;
+    }
+
+    .resource-grid-title {
+        padding: 0 20px 0 20px;
     }
 
     .graph-designer-container .graph-list-header .btn-group {
